--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
     },
     "content_scripts": [{
         "matches": ["https://app.slack.com/client/*" ],
-        "js": ["src/content.js"]
+        "js": ["src/content.js"],
+        "css": ["src/content.css"]
     }],
     "permissions": [
         "storage"
