--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Chrome Extension Trainning",
-    "short_name": "CET",
+    "name": "Slack Columns",
+    "short_name": "SC",
     "version": "0.0.0",
-    "description": "a extention for Google Chrome",
+    "description": "a extension for Google Chrome",
     "icons": {
         "32": "icons/icon-32.png",
         "48": "icons/icon-48.png",
@@ -24,5 +24,5 @@
     "permissions": [
         "storage"
     ],
-    "homepage_url": "https://github.com/k8shiro/chrome_extension_training"
+    "homepage_url": "https://github.com/k8shiro/chrome_extension_slack_columns"
 }
