--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "Slack Columns",
     "short_name": "SC",
     "version": "1.0.0",
-    "description": "a extension for Google Chrome",
+    "description": "Google Chrome Extension for Slack Page",
     "icons": {
         "32": "icons/icon-32.png",
         "48": "icons/icon-48.png",
